# Mini-paczkomat

./: .gitignore
backend/: .dockerignore  Dockerfile  compose.yaml  requirements.txt
backend/backend/: settings.py  urls.py
backend/backend_app/: models.py  permissions.py  serializers.py  views.py
backend/backend_app/migrations/: 0001_initial.py  0002_paczkomat_port_alter_paczkomat_id.py  0002_remove_locker_id_locker_gpio_alter_locker_locker_id.py  0003_package_package_code.py
mobile/: package-lock.json  package.json
paczkomat-mobile/: app.json  package-lock.json  package.json
paczkomat-mobile/app/: _layout.tsx  index.tsx
paczkomat-mobile/app/(app)/: _layout.tsx  register.tsx
paczkomat-mobile/app/(auth)/: login.tsx  register.tsx
paczkomat-mobile/app/(secured)/: _layout.tsx  test.tsx
paczkomat-mobile/components/: AuthProvider.tsx  HelloWave.tsx
paczkomat-mobile/lib/: api.ts  types.ts  utils.ts
paczkomat_backend/: compose.yaml  requirements.txt
paczkomat_backend/backend/: settings.py  urls.py
paczkomat_backend/backend_app/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
paczkomat_backend/backend_app/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py
raspcode/: main.py  ping.py
raspcode/paczkomat_server/: Cargo.toml  diesel.toml
raspcode/paczkomat_server/migrations/: 0001_inital.sql
raspcode/paczkomat_server/migrations/2024-07-06-104304_migrations/: up.sql
raspcode/paczkomat_server/migrations/2024-09-12-111059_create_package/: up.sql
raspcode/paczkomat_server/migrations/2024-12-15-141423_create_locker/: down.sql  up.sql
raspcode/paczkomat_server/src/: functions.rs  lib.rs  main.rs  models.rs  schema.rs  serializers.rs  structs.rs  utils.rs  utilss.rs  views.rs
raspcode/paczkomat_server/tests/: i2c_keyboard_test.rs  i2c_led_test.rs  led_test.rs
