[package]
name = "paczkomat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.1"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tokio = "1.38.0"
sqlx = { version = "0.7.0", features = ["sqlite", "uuid", "runtime-tokio-native-tls"] }


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[target.'cfg(unix)'.dependencies]
rust_gpiozero = "0.2.1"
