[package]
name = "paczkomat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json", "uuid"] }
local-ip-address = "0.6.1"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
serde_json = "1"
anyhow = "1.0"
tokio = "1.38.0"
diesel = { version = "2.0.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
rocket_cors = "0.6.0"
lazy_static = "1.5.0"


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]


[target.'cfg(linux)'.dependencies]
rust_gpiozero = "0.2.1"
rppal = "0.18.0"
